--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <script src="https://use.fontawesome.com/fe84c42321.js"></script>
 </head>
 <body>
+<!-- header-tag -->
+    <header>
+        <div class="logo">
+            <img src="assets/New 1.png" alt="">
+        </div>
+    </header>
+
+<!-- mission statement and form section -->
+
+
+    <section class="section-a">
+
+    </section>
     
 </body>
 </html>
