--- a/signup.html
+++ b/signup.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DNT-ADMIN</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <title>DNT-SIGNUP</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/unsemantic-grid-responsive-table.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Segoe|Mada|Poppins|Roboto|Open Sans">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://use.fontawesome.com/fe84c42321.js"></script>
 </head>
 <body>
-<!-- header-tag -->
+    <!-- header tag -->
+
     <header>
         <div class="logo">
             <img src="assets/New 1.png" alt="">
         </div>
     </header>
 
-<!-- mission statement and form section -->
-
+    <!-- mission statement and signup form -->
     <section class="section-a">
         <div class="grid-container">
             <div class="grid-30">
@@ -39,14 +39,20 @@
                         <i class="fa-solid fa-user">!</i>
                         <input type="text" placeholder="Username"><br><br>
                         <i class="fa-solid fa-lock">!</i>
-                        <input type="password" placeholder="Enter Password"><br>
-                        <button type="submit">Login</button><br>
-                        <a href="#">forget password</a> <span><a href="signup.html" target="_blank">sign up</a></span>
+                        <input type="password" placeholder="Enter Password"><br><br>
+                        <i class="fa-solid fa-lock">!</i>
+                        <input type="password" placeholder="Confrim Password"><br><br><br>
+                        <div class="sign-up">
+                           <button class="signup" type="submit"><a href="index.html">Signup</a></button><br>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+
+
+    
     
 </body>
 </html>
