--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <i class="fa-solid fa-lock">!</i>
                         <input type="password" placeholder="Enter Password"><br>
                         <button type="submit">Login</button><br>
-                        <a href="#">forget password</a> <span><a href="signup.html" target="_self">sign up</a></span>
+                        <a href="#">forget password</a> <span><a href="signup.html">sign up</a></span>
                     </form>
                 </div>
             </div>
