--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,9 @@
     <title>Admin-page</title>
     <link rel="stylesheet" href="css/admin.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Segoe|Mada|Poppins|Roboto|Open Sans">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://use.fontawesome.com/fe84c42321.js"></script>
 </head>
 <body>
 
@@ -17,7 +20,15 @@
 
     </header>
 
-    
+    <div class="dropdown">
+        <button class="dropbtn">Choose Department </button>
+        <i class="fa-solid fa-caret-down"></i>
+        <div class="dropdown-content">
+        <a href="#">Admin Page</a>
+        <a href="#">Financial Statement</a>
+        <a href="#">Record Page</a>
+        </div>
+      </div>
     
 </body>
 </html>
