--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <input type="text" placeholder="Username"><br><br>
                         <i class="fa-solid fa-lock">!</i>
                         <input type="password" placeholder="Enter Password"><br>
-                        <button type="submit"><a href="admin.html">Login</a></button><br>
+                        <button type="submit"><a href="designation.html">Login</a></button><br>
                         <a href="#">forget password</a> <span><a href="signup.html">sign up</a></span>
                     </form>
                 </div>
