--- a/record.html
+++ b/record.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Record-Page</title>
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/record.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/unsemantic-grid-responsive-table.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Segoe|Mada|Poppins|Roboto|Open Sans">
