--- a/designation.html
+++ b/designation.html
@@ -26,7 +26,7 @@
         <div class="dropdown-content">
         <a href="admin.html">Admin Page</a>
         <a href="finance.html">Financial Statement</a>
-        <a href="#">Record Page</a>
+        <a href="record.html">Record Page</a>
         </div>
       </div>
     
