--- a/record.html
+++ b/record.html
@@ -19,10 +19,17 @@
 
     <div class="nav-bars">
         <nav>
-            <form action="">
-                <input type="text" name="search" placeholder="Search..">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
+            <div class="rols">
+                <table class="requests">
+                    <tr>
+                        <th><a href="#">All Request</a></th>
+                        <th><a href="#">Open Request</a></th>
+                        <th><a href="#">Closed Request</a></th>
+                        <th><a href="#">Refresh</a></th>
+                    </tr>
+        
+                </table>
+            </div>
             <div class="helps">
                 <i class="fa-solid fa-circle-question"></i>
                 <a href="#">Help</a>
