--- a/record.html
+++ b/record.html
@@ -42,5 +42,18 @@
         </nav>
         
     </div>
+
+
+    <div class="forms">
+        <form action="#">
+            <input type="text" name="search" placeholder="Search..">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                    <input class="name" type="text" placeholder="Name:">
+                    <input class="date" type="text" placeholder="Date:">
+                    <input class="from" type="text" placeholder="From:">
+                    <input class="to" type="text" placeholder="To:">
+        </form>
+
+    </div>
 </body>
 </html>
