--- a/record.html
+++ b/record.html
@@ -55,5 +55,30 @@
         </form>
 
     </div>
+
+
+
+    <section class="section-a">
+        <div class="grid-container">
+            <div class="grid-30">
+                <div class="radio-forms">
+                    <form action="">
+                        <input type="radio" id="view" >
+                        <label for="view">view</label><br><br>
+                        <input type="radio" id="import">
+                        <label for="import">import</label><br><br>
+                        <input type="radio" id="sort">
+                        <label for="sort">sort</label><br><br>
+                        <input type="radio" id="share/send">
+                        <label for="share/send">share/send</label>
+                    </form>
+                </div>
+
+            </div>
+            <div class="grid-70">
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
