--- a/finance.html
+++ b/finance.html
@@ -48,6 +48,42 @@
 
     </div>
 
+    <div class="list-item">
+        
+        <ul>
+            <button><a href="#">ANALYSIS</a></button>
+            <li><a href="#">view</a></li>
+            <li><a href="#">edit</a></li>
+            <li><a href="#">print</a></li>
+            <li><a href="#">share</a></li>
+            <li><a href="#">sort</a></li>
+        </ul>
+    </div>
+
+
+    <section class="section-a">
+        <div class="grid-container">
+            <div class="grid-30">
+                <div class="radio-forms">
+                    <form action="">
+                        <input type="radio" id="approve" >
+                        <label for="approve">approve</label><br><br>
+                        <input type="radio" id="reject">
+                        <label for="reject">reject</label><br><br>
+                        <input type="radio" id="upload">
+                        <label for="upload">upload</label><br><br>
+                        <input type="radio" id="share/send">
+                        <label for="share/send">share/send</label>
+                    </form>
+                </div>
+
+            </div>
+            <div class="grid-70">
+
+            </div>
+        </div>
+    </section>
+
     
 
 
