--- a/designation.html
+++ b/designation.html
@@ -29,6 +29,9 @@
         <a href="record.html">Record Page</a>
         </div>
       </div>
-    
+
+      <footer>
+        <button><a href="index.html">Back</a></button>
+      </footer>
 </body>
 </html>
