--- a/admin.html
+++ b/admin.html
@@ -14,6 +14,9 @@
 </head>
 <body>
     <header>
+        <footer>
+            <button><a href="index.html">Back</a></button>
+          </footer>
 
     </header>
 
