--- a/admin.html
+++ b/admin.html
@@ -78,21 +78,21 @@
                 <div class="forms2">
                     <form action="">
                         <input type="radio" id="Request ID" >
-                        <label for="Request ID">Request ID</label><br><br>
+                        <label for="Request ID"><a href="">Request ID</a></label><br><br>
                         <input type="radio" id="view">
-                        <label for="view">view</label><br><br>
+                        <label for="view"><a href="">view</a></label><br><br>
                         <input type="radio" id="search">
-                        <label for="search">search</label><br><br>
+                        <label for="search"><a href="">search</a></label><br><br>
                         <input type="radio" id="UPLOAD FILE">
-                        <label for="UPLOAD FILE">UPLOAD FILE</label><br><br>
+                        <label for="UPLOAD FILE"><a href="upload.html">UPLOAD FILE</a></label><br><br>
                         <input type="radio" id="import">
-                        <label for="import">import</label><br><br>
+                        <label for="import"><a href="">import</a></label><br><br>
                         <input type="radio" id="Update">
-                        <label for="Update">Update</label><br><br>
+                        <label for="Update"><a href="">Update</a></label><br><br>
                         <input type="radio" id="share/send">
-                        <label for="share/send">share/send</label><br><br>
+                        <label for="share/send"><a href="">share/send</a></label><br><br>
                         <input type="radio" id="Payment status">
-                        <label for="Payment status">Payment status</label>
+                        <label for="Payment status"><a href="">Payment status</a></label>
                     </form>
                 </div>
 
