--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <footer>
-            <button><a href="designation.html">Back</a></button>
+            <!-- <button><a href="designation.html">Back</a></button> -->
           </footer>
 
     </header>
