--- a/upload.html
+++ b/upload.html
@@ -16,7 +16,7 @@
 
     <header>
         <footer>
-            <button><a href="designation.html">Back</a></button>
+            <!-- <button><a href="designation.html">Back</a></button> -->
           </footer>
 
     </header>
